--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
                 background-color:aquamarine;
             }
             canvas{
-                background-image: url("Assets/back.jpeg");
+                background-image: url("back.jpeg");
                 border: 5px solid black;
                 position: absolute;
                 top:0;
